[gd_scene load_steps=3 format=3 uid="uid://bns6n8yxs18bc"]

[ext_resource type="Script" path="res://Scripts/game_end.gd" id="1_v4a0f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4aji"]
size = Vector2(120, 120)

[node name="GameEnd" type="Area2D"]
script = ExtResource("1_v4a0f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d4aji")

[node name="FadeDelay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="FadeDelay" to="." method="_on_fade_delay_timeout"]
